--- a/Fiap06.Web.MVC/Fiap06.Web.MVC/Fiap06.Web.MVC.csproj
+++ b/Fiap06.Web.MVC/Fiap06.Web.MVC/Fiap06.Web.MVC.csproj
@@ -168,6 +168,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+    <Content Include="Views\Animal\Listar.cshtml" />
+    <Content Include="Views\Animal\Alterar.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
