--- a/Fiap08.Web.MVC/Fiap08.Web.MVC/Fiap08.Web.MVC.csproj
+++ b/Fiap08.Web.MVC/Fiap08.Web.MVC/Fiap08.Web.MVC.csproj
@@ -8,12 +8,12 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{67E82FD2-2CB6-444F-AABD-52C9E69AE3D2}</ProjectGuid>
+    <ProjectGuid>{5498D495-BCF2-422E-BB56-88A86C091C50}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Fiap07.Web.MVC</RootNamespace>
-    <AssemblyName>Fiap07.Web.MVC</AssemblyName>
+    <RootNamespace>Fiap08.Web.MVC</RootNamespace>
+    <AssemblyName>Fiap08.Web.MVC</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
@@ -95,46 +95,26 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\Site.css" />
-    <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
-    <None Include="Scripts\jquery-1.10.2.intellisense.js" />
-    <Content Include="Scripts\jquery-1.10.2.js" />
-    <Content Include="Scripts\jquery-1.10.2.min.js" />
-    <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\JogadorController.cs" />
-    <Compile Include="Controllers\TimeController.cs" />
+    <Compile Include="Controllers\ResponsavelController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Campeonato.cs" />
-    <Compile Include="Models\Jogador.cs" />
-    <Compile Include="Models\Posicao.cs" />
-    <Compile Include="Models\Tecnico.cs" />
-    <Compile Include="Models\Time.cs" />
-    <Compile Include="Persistencia\BrasfootContext.cs" />
+    <Compile Include="Models\Dependente.cs" />
+    <Compile Include="Models\Responsavel.cs" />
+    <Compile Include="Persistencia\EscolaContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\IResponsavelRepository.cs" />
+    <Compile Include="Repositories\ResponsavelRespository.cs" />
+    <Compile Include="Units\UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
-    <Content Include="fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <None Include="packages.config" />
-    <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Time\Cadastrar.cshtml" />
-    <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Views\Jogador\Cadastrar.cshtml" />
-    <Content Include="Views\Jogador\Listar.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -144,6 +124,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Responsavel\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -158,9 +139,9 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>2857</DevelopmentServerPort>
+          <DevelopmentServerPort>2251</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:2857/</IISUrl>
+          <IISUrl>http://localhost:2251/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
