--- a/Fiap08.Web.MVC/Fiap08.Web.MVC/Web.config
+++ b/Fiap08.Web.MVC/Fiap08.Web.MVC/Web.config
@@ -51,10 +51,10 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="BrasfootContext"
-    connectionString="Data Source=(LocalDB)\MSSQLLocalDB;
-      AttachDbFilename=|DataDirectory|\Banco.mdf;
-      Integrated Security=True"
-    providerName="System.Data.SqlClient"/>
+    <add name="EscolaContext"
+        connectionString="Data Source=(LocalDB)\MSSQLLocalDB;
+        AttachDbFilename=|DataDirectory|\Banco.mdf;
+        Integrated Security=True"
+        providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
