--- a/Fiap08.Web.MVC/Fiap08.Web.MVC/Fiap08.Web.MVC.csproj
+++ b/Fiap08.Web.MVC/Fiap08.Web.MVC/Fiap08.Web.MVC.csproj
@@ -124,6 +124,8 @@
     <Compile Include="Repositories\IResponsavelRepository.cs" />
     <Compile Include="Repositories\ResponsavelRespository.cs" />
     <Compile Include="Units\UnitOfWork.cs" />
+    <Compile Include="ViewModels\DependenteViewModel.cs" />
+    <Compile Include="ViewModels\ResponsavelViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
